--- a/app/src/main/res/layout/view_board_reply_layout.xml
+++ b/app/src/main/res/layout/view_board_reply_layout.xml
@@ -5,23 +5,30 @@
     android:layout_height="match_parent">
 
 
-    <TextView
-        android:layout_marginLeft="58dp"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:textAppearance="?android:attr/textAppearanceSmall"
-        android:text="익 명"
-        android:id="@+id/text_board_preview_reply_name"
-        android:layout_gravity="center_vertical" />
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:layout_marginTop="6dp"
+        android:orientation="horizontal">
+        <TextView
+            android:layout_marginLeft="58dp"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:textSize="12sp"
+            android:text="익 명"
+            android:id="@+id/text_board_preview_reply_name"
+            android:layout_gravity="center_vertical" />
 
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:textAppearance="?android:attr/textAppearanceSmall"
-        android:text="댓글 내용..."
-        android:singleLine="true"
-        android:ellipsize="end"
-        android:id="@+id/text_board_preview_reply_content"
-        android:layout_gravity="center_vertical"
-        android:layout_marginLeft="20dp"/>
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:textSize="11sp"
+            android:text="댓글 내용..."
+            android:singleLine="true"
+            android:ellipsize="end"
+            android:id="@+id/text_board_preview_reply_content"
+            android:layout_gravity="center_vertical"
+            android:layout_marginLeft="20dp"/>
+    </LinearLayout>
+
 </LinearLayout>
