--- a/app/src/main/res/layout/a_chat_rooms_list_row.xml
+++ b/app/src/main/res/layout/a_chat_rooms_list_row.xml
@@ -17,11 +17,13 @@
         android:layout_marginTop="2dp"
         android:layout_marginLeft="16dp"
         android:id="@+id/name"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_width="220dp"
+        android:layout_height="20dp"
         android:textColor="#221e1f"
         android:text="username"
         android:textStyle="bold"
+        android:ellipsize="end"
+        android:maxLines="1"
         android:textSize="16sp"
         android:layout_alignParentTop="true"
         android:layout_toRightOf="@+id/thumb"
@@ -48,8 +50,9 @@
         android:layout_alignParentRight="true"
         android:layout_alignParentTop="true"/>
 
-    <TextView android:id="@+id/count"
-        android:layout_width="20dp"
+    <TextView
+        android:id="@+id/count"
+        android:layout_width="wrap_content"
         android:layout_height="20dp"
         android:gravity="center"
         android:textSize="12sp"
@@ -57,7 +60,9 @@
         android:layout_below="@id/timestamp"
         android:layout_marginTop="5dp"
         android:layout_alignParentRight="true"
+        android:paddingLeft="7dp"
+        android:paddingRight="7dp"
         android:text="5"
-        android:background="@drawable/d_artboard_final_list_messagecount"/>
+        android:background="@drawable/z_tab_count_bg"/>
     <!--android:background="@drawable/bg_circle"-->
 </RelativeLayout>
