--- a/app/src/main/res/layout/common_search_bar_spinner.xml
+++ b/app/src/main/res/layout/common_search_bar_spinner.xml
@@ -36,8 +36,8 @@
                 android:id="@+id/image_search_icon"
                 android:clickable="true"
                 android:layout_gravity="end|center_vertical"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
+                android:layout_width="26dp"
+                android:layout_height="26dp"
                 android:src="@drawable/b_list_search_icon_selector"/>
         </FrameLayout>
     </LinearLayout>
@@ -82,7 +82,11 @@
                         android:layout_marginRight="12dp"
                         android:layout_weight="1"
                         android:textColor="#cbc8c6"
-                        android:textSize="@dimen/search_text_size" />
+                        android:textSize="@dimen/search_text_size"
+                        android:hint="유저명"
+                        android:singleLine="true"
+                        android:inputType="text"
+                        android:nextFocusDown="@+id/edit_search_enteryear"/>
                 </LinearLayout>
 
                 <LinearLayout
@@ -106,7 +110,11 @@
                         android:layout_marginLeft="12dp"
                         android:layout_marginRight="12dp"
                         android:layout_weight="1"
-                        android:textSize="@dimen/search_text_size" />
+                        android:textSize="@dimen/search_text_size"
+                        android:hint="ex) 2016"
+                        android:singleLine="true"
+                        android:inputType="number"
+                        android:nextFocusDown="@+id/edit_search_dept"/>
                 </LinearLayout>
 
                 <LinearLayout
@@ -130,7 +138,11 @@
                         android:layout_marginLeft="12dp"
                         android:layout_marginRight="12dp"
                         android:layout_weight="1"
-                        android:textSize="@dimen/search_text_size" />
+                        android:textSize="@dimen/search_text_size"
+                        android:hint="학과명"
+                        android:singleLine="true"
+                        android:inputType="text"
+                        android:nextFocusDown="@+id/edit_search_job"/>
                 </LinearLayout>
 
                 <LinearLayout
@@ -154,40 +166,45 @@
                         android:layout_marginLeft="12dp"
                         android:layout_marginRight="12dp"
                         android:layout_weight="1"
-                        android:textSize="@dimen/search_text_size" />
+                        android:textSize="@dimen/search_text_size"
+                        android:hint="회사명/직무"
+                        android:singleLine="true"
+                        android:inputType="text"
+                        android:imeOptions="actionSearch"/>
                 </LinearLayout>
 
                 <LinearLayout
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_gravity="center_horizontal"
-                    android:layout_marginBottom="16dp"
-                    android:layout_marginTop="16dp"
+                    android:layout_marginBottom="4dp"
                     android:orientation="horizontal">
                     <TextView
                         android:background="@drawable/z_btn_white_selector"
                         android:id="@+id/text_search_cancel"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
+                        android:layout_width="60dp"
+                        android:layout_height="40dp"
+                        android:gravity="center"
                         android:text="취 소"
                         android:textColor="#77a8bc"
                         android:textSize="@dimen/search_text_size" />
                     <LinearLayout
+                        android:layout_gravity="center_vertical"
                         android:layout_width="1dp"
                         android:layout_height="20dp"
-                        android:layout_marginLeft="12dp"
-                        android:layout_marginRight="12dp"
+                        android:layout_marginLeft="4dp"
+                        android:layout_marginRight="4dp"
                         android:background="#77a8bc"
                         android:orientation="vertical"></LinearLayout>
                     <TextView
                         android:background="@drawable/z_btn_white_selector"
                         android:id="@+id/text_search_confirm"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
+                        android:layout_width="60dp"
+                        android:layout_height="40dp"
+                        android:gravity="center"
                         android:text="확 인"
                         android:textColor="#77a8bc"
                         android:textSize="@dimen/search_text_size" />
-
                 </LinearLayout>
             </LinearLayout>
         </LinearLayout>
